# nxentra-register

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  APP_STORE_SUBMISSION_KIT.md  ENGINEERING_PROTOCOL.md  EVALUATION_STATUS.md  FINANCE_EVENT_FIRST_POLICY.md  GA_SCORECARD.md  LICENSE  NEXT_SESSION_PROMPT.md  NEXT_TASKS.md  NXENTRA_AUDIT_2026_07_11.md  NXENTRA_CODEX_INDEPENDENT_AUDIT_2026_07_11.md  NXENTRA_EVALUATION_2026_04_16.md  NXENTRA_REVIEW.md  NXENTRA_SYSTEM_MAP.md  README.md  SESSION_LOG.md  SHOPIFY_DATA_OWNERSHIP.md  TASKS_DONE.md  docker-compose.yml  landing_page_status.md  shopify.app.toml
backend/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup_local_db.bat  setup_local_db.sql  test_db.sqlite3  test_email_debug.py
backend/accounting/: __init__.py  account_drilldown.py  account_inquiry.py  admin.py  aggregates.py  apps.py  bank_reconciliation.py  bank_views.py  behaviors.py  chunked_commands.py  commands.py  consumers.py  dimension_validation.py  exports.py  mappings.py  models.py  payment_gateway.py  payment_gateway_views.py  payment_settlement_projection.py  period_override_audit_views.py  policies.py  reconciliation_views.py  routing.py  seeds.py  serializers.py  settlement_import_views.py  settlement_imports.py  settlement_provider.py  settlement_provider_views.py  signals.py  tasks.py  urls.py  validation.py  views.py
backend/accounts/: __init__.py  admin.py  apps.py  authentication.py  authz.py  commands.py  email_service.py  middleware.py  models.py  module_permissions.py  module_registry.py  passwords.py  permission_defaults.py  permissions.py  rls.py  serializers.py  throttles.py  urls.py  views.py
backend/backups/: admin.py  apps.py  exporter.py  importer.py  model_registry.py  models.py  urls.py  views.py
backend/bank_connector/: admin.py  apps.py  exceptions.py  matching.py  models.py  parsers.py  urls.py  views.py
backend/clinic/: apps.py  commands.py  event_types.py  projections.py  serializers.py  urls.py  views.py
backend/docs/: OPS_PLAYBOOK.md  vertical_module_architecture.md
backend/edim/: admin.py  apps.py  commands.py  event_types.py  mappers.py  models.py  parsers.py  projections.py  serializers.py  urls.py  validators.py  views.py
backend/events/: __init__.py  admin.py  api_keys.py  apps.py  emitter.py  external.py  ingest.py  integrity.py  metrics.py  models.py  payload_policy.py  payload_store.py  serialization.py  serializers.py  types.py  urls.py  verification.py  views.py
backend/inventory/: __init__.py  admin.py  apps.py  commands.py  costing.py  models.py  serializers.py  urls.py  views.py
backend/nxentra_backend/: __init__.py  asgi.py  celery.py  crypto.py  pagination.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/ops/: __init__.py  apps.py  health.py  logging_config.py  metrics.py  middleware.py  sentry_scrub.py  urls.py
backend/platform_connectors/: apps.py  base.py  canonical.py  commands.py  dimensions.py  event_types.py  je_builder.py  models.py  projections.py  registry.py  urls.py  views.py
backend/projections/: __init__.py  account_balance.py  accounting.py  accounts.py  admin.py  apps.py  base.py  close_checks.py  dimension_balance.py  dimension_sync.py  exceptions.py  failure_log_views.py  inventory_balance.py  models.py  period_balance.py  periods.py  property.py  statistical_entry.py  subledger_balance.py  tasks.py  urls.py  views.py  write_barrier.py
backend/properties/: admin.py  apps.py  commands.py  event_types.py  reports.py  serializers.py  tasks.py  urls.py  views.py
backend/purchases/: __init__.py  admin.py  apps.py  commands.py  models.py  serializers.py  urls.py  views.py
backend/reconciliation/: apps.py  commands.py  event_types.py  events.py  exceptions.py  matching.py  models.py  policies.py  projections.py  urls.py  views.py
backend/sales/: __init__.py  admin.py  apps.py  commands.py  models.py  serializers.py  urls.py  views.py
backend/scratchpad/: __init__.py  admin.py  apps.py  commands.py  models.py  serializers.py  urls.py  validation.py  views.py  voice_parser.py
backend/shopify_connector/: apps.py  commands.py  connector.py  event_types.py  gdpr.py  graphql_client.py  models.py  projections.py  reconciliation.py  serializers.py  session_auth.py  tasks.py  urls.py  user_binding.py  views.py
backend/stripe_connector/: admin.py  api_client.py  apps.py  commands.py  connector.py  models.py  normalize.py  payout_reads.py  reconciled_emit.py  reconciliation.py  seed.py  sync.py  tasks.py  urls.py  views.py
backend/tenant/: __init__.py  admin.py  apps.py  context.py  models.py  router.py
backend/tests/: conftest.py  pytest.ini  test_a105_exception_queue_trust.py  test_a120_shopify_sync_403_resilience.py  test_a122_rotating_tokens.py  test_a123_pii_scrub.py  test_a124_gdpr_jobs.py  test_a125_cogs_backfill.py  test_a126_historical_import.py  test_a127_price_backfill.py  test_a127b_product_webhook_price.py  test_a12_followups.py  test_a134_store_resolution.py  test_a135_relevance_aware_lag.py  test_a137_account_drilldown.py  (+151 more)
(+696 files in other folders)
